--- a/style.css
+++ b/style.css
@@ -330,3 +330,68 @@ order: 2;
 
 
 	
+/* petfinder */
+
+
+
+h2{
+	text-align: center;
+}
+
+
+h3{
+	text-align: center;
+}
+
+
+
+
+
+
+
+.column-petfinder {
+	float: left;
+	width: 33.33%;
+	padding: 15px;
+  }
+  
+  
+  .row::after-petfinder {
+	content: "";
+	clear: both;
+	display: table;
+  }
+
+
+.column-petfinder {
+  float: left;
+  width: 25%;
+  padding:  10px;
+}
+
+
+.row-petfinder {margin: 0 -5px;}
+
+
+.row:after-petfinder {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+@media screen and (max-width: 600px) {
+  .column-petfinder {
+    width: 100%;
+    display: block;
+    margin-bottom: 100px;
+  }
+}
+
+
+.card-petfinder {
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
